# sparrow

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  Vagrantfile  locustfile.py  makefile  pyproject.toml  requirements.txt  setup.cfg  setup.py  template for outlook automation.pptx
.circleci/: config.yml
sparrow/: app.py  gen_pdf.py  unit_converter.py
tests/: test_unit_converter.py
web/: hello.py
